[package]
name = "coswid"
version = "0.1.0"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "parser"
path = "src/parser.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
ciborium = { version = "0.1.0", features = ["std"] }
thiserror = "1.0.23"
