[package]
name = "coswid"
version = "0.1.3"
description = "CoSWID parser"
license = "MIT"
homepage = "https://github.com/puiterwijk/coswid-rs"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "coswid-parser"
path = "src/parser.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
ciborium = { version = "0.1.0", features = ["std"] }
num_enum = "0.5.1"
serde_json = "1.0.61"

serde_int_map = { version = "0.1.1", path = "../serde_int_map/serde_int_map" }
